# asqav-pydantic

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/asqav_pydantic/: __init__.py  hook.py
tests/: test_hook.py
