[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asqav-pydantic"
version = "0.1.2"
description = "PydanticAI integration for asqav - cryptographic audit trails for AI agent tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Asqav", email = "hello@asqav.com" }
]
keywords = [
    "ai",
    "agents",
    "pydantic-ai",
    "governance",
    "audit-trail",
    "compliance",
    "cryptographic-signing",
    "tool-calls",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "asqav>=0.2.15",
    "pydantic-ai>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://asqav.com"
Documentation = "https://asqav.com/docs"
Repository = "https://github.com/jagmarques/asqav-pydantic"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asqav_pydantic"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
